--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,9 @@
     scroll-behavior: smooth;
   }
   
+  
+.playwrite-text {
+  font-family: "Playwrite AU SA", cursive;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
